--- a/style.css
+++ b/style.css
@@ -131,3 +131,48 @@ main{
 .card-body img{
   border-radius: 50%;
 }
+
+/* Restringimento sidebar tra 1330 e 801px */
+
+@media screen and (max-width:1330px){
+  .side-bar{
+    width: 73px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .side-bar .widget{
+    padding: 0;
+    border-bottom: 0px
+  }
+
+  .menu-item{
+    height: 73px;
+    flex-direction: column;
+    row-gap: 3px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .menu-item span{
+    font-size: 12px;
+  }
+
+  .menu-item .icon{
+    font-size: 28px;
+    margin: 0;
+  }
+
+  .menu-item{
+    width: 73px;
+    height: 73px;
+  }
+
+  .side-bar div:nth-child(3){
+    display: none;
+  }
+
+  .side-bar div:nth-child(2) ul li:nth-child(1n + 2){
+    display: none;
+  }
+}
