--- a/style.css
+++ b/style.css
@@ -22,16 +22,19 @@ body{
   height: 100vh;
 }
 
-header{
-  padding: 30px;
+/* header{
   border: 2px solid red;
-  height: 20px;
-}
+
+} */
 
 main{
   display: flex;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   flex-grow: 1;
+}
+
+a{
+  color: currentColor;
 }
 
 .side-bar{
@@ -46,7 +49,7 @@ main{
 }
 
 .menu-item{
-  padding: 10px 10px;
+  padding: 10px 10px 10px 26px;
   display: flex;
   align-items: center;
 
@@ -214,4 +217,96 @@ main{
   .play-list-item{
     width: 99%;
   }
+}
+
+/* fatti i punti richiesti per l'esercizio continuo il codice per terminare il layout */
+
+
+        /* HEADER  */
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 56px;
+}
+
+.menu-home .header-menu{
+  width: 73px;
+  text-align: center;
+  font-size: 25px;
+}
+
+.menu-home .header-logo{
+  width: 100px;
+}
+
+.menu-home{
+  display: flex;
+  align-items: flex-end;
+}
+
+.input .search-bar input{
+  width: 570px;
+  height: 40px;
+  padding-left: 15px;
+  font-size: 16px;
+  border: 1px solid #D3D3D3;
+}
+
+.input .search-button{
+  height: 40px;
+  width: 64px;
+  border-left: none;
+  border: 1px solid #D3D3D3;
+  text-align: center;
+  line-height: 38px;
+  background-color: #F8F8F8;
+  font-size: 20px;
+}
+
+.input .mic{
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 50%;
+  background-color: #F9F9F9;
+  text-align: center;
+  line-height: 40px;
+  margin-left: 10px;
+}
+
+.input{
+  display: flex;
+  align-items: center;
+}
+
+.actions{
+  display: flex;
+  align-items: center;
+  column-gap: 10px;
+  padding-right: 35px;
+}
+
+.actions .act{
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  text-align: center;
+  line-height: 40px;
+}
+
+.actions .act.profile{
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+       /* MAIN   */
+
+.main-container .categories{
+  border-top: 0.5px;
+  border-bottom: 0.5px;
+  border-left: 0px;
+  border-right: 0px;
+  border-style: solid;
+  border-color: #D3D3D3;
 }
