--- a/style.css
+++ b/style.css
@@ -369,7 +369,24 @@ header{
 }
 
 /* Elemento di divisione  */
-.play-list-wrapper{
+/* .play-list-wrapper{
   border-bottom: 2px solid #D3D3D3;
 
+} */
+
+/* News extra, parte bassa del main  */
+.extra-news{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px;
+}
+
+.extra-news .extra-title{
+  font-size: 16px;
+  font-weight: 550;
+}
+
+.extra-news .extra-title span:last-child{
+  text-transform: uppercase;
 }
