--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ header{
   justify-content: space-between;
   align-items: center;
   height: 56px;
+  padding: 10px 0;
 }
 
 .menu-home .header-menu{
@@ -253,8 +254,16 @@ header{
 }
 
 .input .search-bar input{
-  height: 40px;
+  border-style: none;
+  width: 100%;
+  height: 100%;
   padding-left: 15px;
+}
+
+.input .search-bar{
+  width: 50%;
+  max-width: 570px;
+  height: 40px;
   font-size: 16px;
   border: 1px solid #D3D3D3;
 }
@@ -262,7 +271,6 @@ header{
 .input .search-button{
   height: 40px;
   width: 64px;
-  border-left: none;
   border: 1px solid #D3D3D3;
   text-align: center;
   line-height: 38px;
@@ -284,8 +292,9 @@ header{
 .input{
   display: flex;
   align-items: center;
-  flex-grow: 1;
   justify-content: center;
+  flex-grow: 1;
+  padding: 0 20px;
 }
 
 .actions{
@@ -307,6 +316,39 @@ header{
 .actions .act.profile{
   border-radius: 50%;
   overflow: hidden;
+}
+
+/* Comportamento dell'header con le media query  */
+@media screen and (max-width:657px){
+
+  .input{
+    padding-right: 0;
+    justify-content: flex-end;
+  }
+
+  header .input .search-bar{
+    display: none;
+  }
+
+  .input .search-button{
+    height: 40px;
+    width: 40px;
+    border: none;
+    text-align: center;
+    line-height: 38px;
+    background-color: white;
+    font-size: 20px;
+  }
+
+  .input .mic{
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    background-color: white;
+    text-align: center;
+    line-height: 40px;
+    margin-left: 0;
+  }
 }
 
        /* MAIN   */
@@ -368,10 +410,13 @@ header{
   right: 3px;
 }
 
-/* Elemento di divisione  */
-/* .play-list-wrapper{
-  border-bottom: 2px solid #D3D3D3;
-
+/* Elemento di divisione.... l'ho commentato perche non riesco a farlo visualizzare sulla */
+/* .main-container:nth-child(3)::before{
+  content: "";
+  display: block;
+  width: calc(100% - 30px - 30px);
+  height: 3px;
+  color: #DFDFDF;
 } */
 
 /* News extra, parte bassa del main  */
